--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+
+  background-color: antiquewhite;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button{
+  border-radius: 5px;
+  height: 25px;
+  min-width: 40px;
+  background-color: rgb(0, 15, 178);
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+  border: none;
+  padding: 0 10px;
+  margin: 0 10px;
+}
+
+button:hover{
+  background-color: rgb(14, 14, 206);
 }
